update permission and apply trigger, view